...
					tabPress: handleTabPress,
				}}
				options={{
					title: "Diary",
					headerShown: false,
					tabBarLabelStyle: styles.label,
					tabBarButtonTestID: "tab-diary",
					tabBarIcon: ({ color, focused }) => (
						<Ionicons
							name={focused ? "book" : "book-outline"}
							color={color}
							size={24}
						/>
...
